2009-03-30  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/cms.py: 
	* lib/pytis/extensions/cms/web.py:
	Added support for distinction of logged in and anonymous users.
	Refer to `uid', not `login' form session.  Wrap all module
	references by `_spec_name()'.  Added (unused) session log module.

	* db/db_pytis_cms.py: 
	

2009-03-20  Tomas Cerha  <cerha@debian.brailcom.xx>

	* db/db_pytis_cms.py:
	* lib/pytis/extensions/cms/cms.py: 
	* lib/pytis/extensions/cms/web.py: 
	Added support for system roles.

2009-03-17  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/__init__.py: 
	Added documentation.

	* lib/pytis/extensions/cms/web.py:
	Implemented authentication/authorization and session management.

2009-03-10  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/cms.py:
	Use `_cbname()' also in `UserRoles'.

	* db/db_pytis_cms.py:
	Added Wiking session support.

2009-03-09  Milan Zamazal  <pdm@brailcom.org>

	* ev/null:
	Add common database definitions.

2009-03-06  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/spec.py:
	Don't alias `FieldSpec' -> `Field' here.  It is already in pytis.

2009-03-05  Tomas Cerha  <cerha@debian.brailcom.xx>

	* db/cms.sql: 
	File removed (replaced by `db_pytis_cms.py').

	* db/db_pytis_cms.py: 
	* lib/pytis/extensions/cms/__init__.py: 
	* lib/pytis/extensions/cms/cms.py: 
	Added support for users, roles and rights management.

2009-03-04  Tomas Cerha  <cerha@brailcom.org>

	* db/db_pytis_cms.py: 
	Added Pytis CMS gensql definition.

2009-02-27  Tomas Cerha  <cerha@brailcom.org>

	* db/cms.sql: 
	* lib/pytis/extensions/__init__.py (Module): 
	* lib/pytis/extensions/cms/__init__.py: 
	* lib/pytis/extensions/cms/cms.py: 
	* lib/pytis/extensions/cms/web.py: 
	Added generic Pytis CMS.

2008-12-22  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/help.py:
	Include side form descriptions in the list of bindings.
